methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:12: error: not found: value color
  setBrushColor(color.YELLOW)
                ^