methods.flowerpot.FlowerPot.scala.code
def flower(c:Color) {
  setBrushColor(c)
  brushDown()
  forward()
  forward()
  left()
  forward()
  back()
  forward()
  left()
  brushUp()
  setBrushColor(color.YELLOW)
  brushDown()
  brushUp()
  backward()
}



def growFlowers(){
flower(Color.RED)
for (i <- 1 to 4) {
  forward()
}
flower(Color.CYAN)
backward()
right()
forward()
flower(Color.ORANGE)
for (i <- 1 to 3){
  forward()
}

left()
forward()
flower(Color.GREEN)
for (i<- 1 to 4) {
  backward()
}
flower(Color.PINK)
  
}